# Tel-102

./: .gitignore  CMakeLists.txt  README.md
pre-inicio_semestre/Choripan/: choripan.c
pre-inicio_semestre/Mineros/: Mineros.c
pre-inicio_semestre/Sumando-Enteros/: Sumando-enteros.c
pre-inicio_semestre/Tropa 104/: tropa.c
