project(Tel-102)
cmake_minimum_required(VERSION 3.13)

add_executable(Sumando-enteros pre-inicio_semestre/Sumando-Enteros/Sumando-enteros.c)
add_executable(hello-world pre-inicio_semestre/hello-world.c)
add_executable(Mineros pre-inicio_semestre/Mineros/Mineros.c)
add_executable(choripan pre-inicio_semestre/Choripan/choripan.c)
add_executable(tropa "pre-inicio_semestre/Tropa 104/tropa.c")